force-app/main/default/objects/PosSerialNumber__c/PosSerialNumber__c.object-meta.xml
<CustomObject>
    <description>Reviewed 7.19.2021 this object is needed as it is a temporary memory for pos spa information that is used it the serial number update process.</description>
    <label>PosSerialNumber</label>
    <nameField>
        <label>PosSerialNumber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PosSerialNumbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>