force-app/main/default/objects/PosSerialNumber__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <label>Reseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>