force-app/main/default/objects/PosSerialNumber__c/fields/SpaIdKey__c.field-meta.xml
<CustomField>
    <fullName>SpaIdKey__c</fullName>
    <formula>BLANKVALUE(SpaId__c, SpaId2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpaIdKey</label>
    <type>Text</type>
</CustomField>